# AgenticAi

./: .gitignore  main.py  pyproject.toml
LangGraph/workflows/: LangGraph.ipynb  chatbot_v1.ipynb  helper.py  iterative_workflow.ipynb
crewai/: agent2.py  agent_routes.py  agentic_workflow.py
