[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.150.0",
    "dotenv>=0.9.9",
    "google-generativeai>=0.7.2",
    "langchain>=0.3.27",
    "langgraph>=0.6.3",
    "litellm>=1.74.3",
    "typing>=3.10.0.0",
]
